# test-report-vibes

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: sample_report.json  sample_report_with_classifiers.html  sample_report_with_classifiers.json
src/test_report_vibes/: __init__.py  __main__.py  classifier.py  cli.py  filter.py  html_generator.py  models.py  parser.py
tests/: test_classifier.py  test_report.py
tests/fixtures/: all_passing.json  mixed_scenarios.json  multiple_failures.json  slow_steps.json  tagged_scenarios.json  with_screenshots.json
